# BlackJack

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.BD340AA71A6C6FAF.idx  raylib.h.9E7A18EFC5AF2E70.idx
assets/: card_icons.rgi
include/: card.h  game.h  game_state.h  hand.h  renderer.h  updater.h
include/assets/: card_sprites.h
src/: card.cpp  game.cpp  main.cpp  renderer.cpp  updater.cpp
